# lambdadays2014

./: .gitignore  README.md  cheatsheet.md
ios/Streamer/: ViewController.m
jvm/src/main/scala/org/eigengo/cm/: shell.scala
jvm/src/main/scala/org/eigengo/cm/core/: recog.scala
native/: jzon.cpp
native/documentocr/: CMakeLists.txt
native/documentocr/src/: CMakeLists.txt  main.cpp  main.h  preprocessor.h
native/documentocr/src/preprocessor/: sharpness.cpp  superres.cpp  superres.h
native/documentocr/src/splitter/: preclassified.cpp
native/documentocr/test/: CMakeLists.txt  superres.cpp
native/recog/src/: coins.cpp  coins.h  main.cpp  main.h  opencvu.h
provisioning/machines/zero/: Vagrantfile  bootstrap.sh  build-all.sh
provisioning/machines/zero/puppet/manifests/: default.pp
provisioning/modules/build-dependencies/manifests/: init.pp
provisioning/modules/development-tools/manifests/: init.pp
provisioning/modules/rabbitmq/manifests/: init.pp
slides/: actors.graffle  api.graffle  coordinator.graffle  fsm.graffle
slides/ld.key/Data/: coins2-108.mov
slides/ld.key/Metadata/: BuildVersionHistory.plist  DocumentIdentifier  Properties.plist
